# Zuri

./: .gitignore  README.md  keep_alive.js  render.yaml  start_keep_alive.bat
apps/kuriftu-demo-site/: index.html  pnpm-lock.yaml  tailwind.config.ts
apps/panel/: .env.example  middleware.ts  next.config.mjs  tsconfig.tsbuildinfo
data/: MASTER_DATA_GUIDE.md
data/haile/: FULL_PROFILE.md  knowledge.txt  rooms.txt  services.txt
data/kuriftu/: FULL_PROFILE.md  INSTRUCTION_GUIDE.md  KNOWLEDGE_UPDATE.md  knowledge.txt  rooms.txt  (+1 more)
server/: .env.example  README.md  debug_output.html  main.py  pyproject.toml
server/app/api/: auth.py  bookings.py  chat.py  dashboard.py  embed.py  generator.py  knowledge.py  live_voice.py  resorts.py  services.py  settings.py  speech.py  voice_interact.py
server/app/core/: auth.py  config.py  database.py  middleware.py  origin.py  rate_limit.py
server/app/models/: schemas.py
server/app/rag/: booking_tools.py  chunker.py  embedder.py  ingest.py  query_engine.py  vector_store.py
server/app/services/: booking_codes.py  booking_inventory.py  chat_service.py  generator_service.py  knowledge_service.py  speech_service.py
server/migrations/: 2026-03-29_add_booking_confirmation_code.sql
server/sample_docs/: haile_knowledge.txt  kuriftu_knowledge.txt  sheraton_knowledge.txt
server/scripts/: apply_sql_migrations.py  check_db.py  ingest_samples.py  init_db_manual.py  onboard_resort.py  ping_health.py  seed_resorts.py
server/tests/e2e/: test_full_app.py
server/tests/integration/: test_health.py
server/tests/unit/: test_origin.py
(+48 files in other folders)
