[project]
name = "server"
version = "0.1.0"
description = "Zuri AI Concierge - RAG Backend Server"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "chromadb>=0.6.0",
    "google-genai>=1.0.0",
    "python-multipart>=0.0.18",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.0.0",
    "psycopg2-binary>=2.9.0",
]
